k8s/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: animesenpai
  labels:
    name: animesenpai
    environment: production
